Добавил telegram.php

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="box">
-      <form method="post" class="form">
+      <form method="post" class="form" action="./telegram.php">
         <h2>Заказать обратный звонок</h2>
         <input
           type="text"
